Added support for pauses.

--- a/src/Club/ShopBundle/Resources/views/Subscription/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/index.html.twig
@@ -4,6 +4,8 @@
 
 <h1>Subscriptions</h1>
 
+{% include "::flash.html.twig" %}
+
 {% include "ClubShopBundle:Subscription:subscription_table.html.twig" with {'user': user} %}
 {% include "ClubShopBundle:Subscription:ticket_coupon_table.html.twig" with {'user': user} %}
 
