Fixed cancel subscription.

--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -39,7 +39,7 @@
       <td>
         <a href="{{ path('admin_user_edit', { 'id':user.id }) }}"><img src="{{ asset('images/ico-edit.gif') }}" class="ico" alt="Edit" /></a>
         <a href="{{ path('admin_user_delete', { 'id':user.id }) }}"><img src="{{ asset('images/ico-delete.gif') }}" class="ico" alt="Delete" /></a>
-        <a href="{{ path('admin_user_subscription', { 'id':user.id }) }}"><img src="{{ asset('images/icons/16/System-Security-Card-icon.png') }}" alt="Subscription" /></a>
+        <a href="{{ path('admin_shop_subscription', { 'id':user.id }) }}"><img src="{{ asset('images/icons/16/System-Security-Card-icon.png') }}" alt="Subscription" /></a>
         <a href="{{ path('admin_user_shop', { 'id':user.id }) }}"><img src="{{ asset('images/icons/16/shopping-cart-insert-icon.png') }}" alt="Shop as" /></a>
         <a href="{{ path('admin_user_ban', { 'id':user.id }) }}"><img src="{{ asset('images/icons/16/Actions-im-ban-user-icon.png') }}" alt="Ban" /></a>
         <a href="{{ path('admin_user_address', { 'id':user.id }) }}"><img src="{{ asset('images/icons/16/Home-icon.png') }}" alt="Address"/></a>
