--- a/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
@@ -18,10 +18,11 @@
       <td>{{ subscription.startDate|date('Y-m-d') }}</td>
       <td>{{ subscription.expireDate|date('Y-m-d') }}</td>
       <td>
+        <a href="{{ path('admin_shop_subscription_expire', {'id':subscription.id}) }}">Expire</a>
         {% if subscription.isActive %}
-        <a href="{{ path('shop_subscription_pause', {'id':subscription.id}) }}">Pause</a>
+        <a href="{{ path('admin_shop_subscription_pause', {'id':subscription.id}) }}">Pause</a>
         {% else %}
-        <a href="{{ path('shop_subscription_resume', {'id':subscription.id}) }}">Resume</a>
+        <a href="{{ path('admin_shop_subscription_resume', {'id':subscription.id}) }}">Resume</a>
         {% endif %}
       </td>
     </tr>
