--- a/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h1>User</h1>
 
-<form method="post" action="{{ path('admin_user_new') }}">
+<form method="post" action="{{ path('admin_user_create') }}">
 {% include "ClubUserBundle:AdminUser:form.html.twig" with {'form': form} %}
 </form>
 
