--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -2,6 +2,9 @@
 
 {% block body %}
 <h1>User</h1>
+
+{% render 'ClubUserBundle:Filter:getFilterForm' %}
+
 <p class="box"><a href="{{ path('admin_user_new') }}" class="btn-create"><span>Create user</span></a></p>
 
 {{ app.session.flash('notice') }}
