Fixed counter on paginator.

--- a/src/Club/UserBundle/Resources/views/AdminUser/paginator.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/paginator.html.twig
@@ -21,7 +21,7 @@
           &raquo;
           {% endif %}
         </p>
-        <p class="f-left">Showing <strong>{{ paginator.offset }}&ndash;{{ paginator.offset+paginator.limit }}</strong> of <strong>{{ paginator.itemsCount }}</strong> Results</p>
+        <p class="f-left">Showing <strong>{{ paginator.offset+1 }}&ndash;{{ paginator.offset+paginator.limit }}</strong> of <strong>{{ paginator.itemsCount }}</strong> Results</p>
       </div> <!-- /pagination -->
 
 
