Added flash screen on all pages if a critical havent been read.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -92,6 +92,8 @@
                 <!-- Content (Right Column) -->
                 <div id="content" class="box">
 
+                        {% render "ClubLogBundle:Log:LogView" %}
+
                         {% block body %}{% endblock %}
 
                 </div> <!-- /content -->
