Added event ical format.

--- a/src/Club/EventBundle/Resources/views/Event/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/index.html.twig
@@ -4,6 +4,7 @@
 
 <h1>Event</h1>
 
+<p><a href="{{ path('club_event_event_ical') }}">Ical format</a></p>
 <h2>Event</h2>
 {% include "::flash.html.twig" %}
 
