Remove table sorter jquery.

--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -10,7 +10,7 @@
 {{ app.session.flash('notice') }}
 
 <form method="post" action="{{ path('admin_user_batch') }}">
-<table class="tablesorter">
+<table>
   <thead>
     <tr>
       <th>[x]</th>
