--- a/src/Club/UserBundle/Resources/views/Ban/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Ban/index.html.twig
@@ -6,7 +6,7 @@
 {{ app.session.flash('notice') }}
 
 <form method="post" action="">
-<table class="tablesorter">
+<table>
   <thead>
     <tr>
       <th>[x]</th>
