--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -11,7 +11,6 @@
       <li><a href="{{ path('admin_log') }}">Log</a></li>
     </ul>
   </li>
-  <li><a href="{{ path('admin_event_event') }}">Event</a></li>
   <li><a href="{{ path('shop') }}">Shop</a>
     <ul>
       <li><a href="{{ path('admin_shop_product') }}">Product</a></li>
@@ -23,5 +22,8 @@
       <li><a href="{{ path('admin_shop_transaction') }}">Transaction</a></li>
     </ul>
   </li>
+  <li><a href="{{ path('admin_event_event') }}">Event</a></li>
+  <li><a href="{{ path('club_account_adminaccount_index') }}">Account</a></li>
+
 </ul>
 
