Added support for add payment.

--- a/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
+++ b/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
@@ -4,6 +4,8 @@
 
 <h1>Account</h1>
 
+<p class="box"><a href="{{ path('club_account_adminledger_new') }}" class="btn-create"><span>Create ledger</span></a></p>
+
 <h2>Account</h2>
 
 {% include "::flash.html.twig" %}
