--- a/src/Club/ShopBundle/Resources/views/AdminSubscription/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSubscription/index.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Subscriptions</h1>{% endblock %}
 
-<h1>Subscriptions</h1>
+{% block body %}
 
 {% include "::flash.html.twig" %}
 
