--- a/src/Club/ShopBundle/Resources/views/Product/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Product/index.html.twig
@@ -1,8 +1,9 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Product</h1>{% endblock %}
+
 {% block body %}
 
-<h1>Product</h1>
 <h2>{{ product.productName }}</h2>
 
 <p>
