--- a/src/Club/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/index.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>User</h1>{% endblock %}
+
 {% block body %}
-<h1>User</h1>
 
 <form method="post" action="{{ path('user', {'id':user.id}) }}">
 {% include "ClubUserBundle:User:form.html.twig" with {'form': form} %}
