--- a/src/Club/AccountBundle/Resources/views/AdminLedger/index.html.twig
+++ b/src/Club/AccountBundle/Resources/views/AdminLedger/index.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Ledger</h1>{% endblock %}
 
-<h1>Ledger</h1>
+{% block body %}
 
 <h2>Ledger</h2>
 
