--- a/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Event</h1>{% endblock %}
 
-<h1>Event</h1>
+{% block body %}
 
 {% include "::flash.html.twig" %}
 
