--- a/src/Club/EventBundle/Resources/views/AdminAttend/new.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/new.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Event</h1>{% endblock %}
+
 {% block body %}
-<h1>Event</h1>
 
 <form method="post" action="{{ path('admin_event_event_new') }}">
 {% include "ClubEventBundle:AdminEvent:form.html.twig" with {'form': form} %}
