--- a/src/Club/EventBundle/Resources/views/Event/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/index.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Event</h1>{% endblock %}
 
-<h1>Event</h1>
+{% block body %}
 
 <p><a href="{{ path('club_event_event_ical') }}">Ical format</a></p>
 <h2>Event</h2>
