--- a/src/Club/EventBundle/Resources/views/Event/show.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/show.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Event</h1>{% endblock %}
+
 {% block body %}
-<h1>Event</h1>
 
 <h2>{{ event.eventName }}</h2>
 
