--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Order</h1>{% endblock %}
+
 {% block body %}
-<h1>Order</h1>
 
 <h2>Customer</h2>
 <p>Company: {{ order.customerAddress.companyName }}<br />
