--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/edit.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Product Attributes</h1>{% endblock %}
+
 {% block body %}
-<h1>Product attributes</h1>
 
 <form method="post" action="{{ path('admin_shop_product_attribute_edit', {'id':attr.id}) }}">
 {% include "ClubShopBundle:AdminProductAttribute:form.html.twig" with {'form': form} %}
