--- a/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
@@ -1,8 +1,9 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Shipping</h1>{% endblock %}
+
 {% block body %}
 
-<h1>Shipping</h1>
 <p class="box"><a href="{{ path('admin_shop_shipping_new') }}" class="btn-create"><span>Create shipping</span></a></p>
 
 {% include "::flash.html.twig" %}
