--- a/src/Club/ShopBundle/Resources/views/AdminSpecial/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSpecial/index.html.twig
@@ -1,8 +1,9 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Special</h1>{% endblock %}
+
 {% block body %}
 
-<h1>Special</h1>
 <p class="box"><a href="{{ path('admin_shop_special_new') }}" class="btn-create"><span>Create special</span></a></p>
 
 {% include "::flash.html.twig" %}
