--- a/src/Club/ShopBundle/Resources/views/AdminSpecial/new.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSpecial/new.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Special</h1>{% endblock %}
+
 {% block body %}
-<h1>Special</h1>
 
 <form method="post" action="{{ path('admin_shop_special_new') }}">
 {% include "ClubShopBundle:AdminSpecial:form.html.twig" with {'form': form} %}
