--- a/src/Club/ShopBundle/Resources/views/AdminTransaction/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminTransaction/index.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Transaction</h1>{% endblock %}
 
-<h1>Transaction</h1>
+{% block body %}
 
 <form method="post" action="">
 <table>
