--- a/src/Club/ShopBundle/Resources/views/Checkout/confirm.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/confirm.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Checkout</h1>{% endblock %}
+
 {% block body %}
-<h1>Checkout</h1>
 
 {{ order.paymentmethod.page|raw }}
 
