--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Shop</h1>{% endblock %}
 
-<h1>Shop</h1>
+{% block body %}
 
 {{ app.session.flash('notice') }}
 
