--- a/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Checkout</h1>{% endblock %}
+
 {% block body %}
-<h1>Checkout</h1>
 
 <h3>Review order</h3>
 
