--- a/src/Club/ShopBundle/Resources/views/Order/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/index.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Order</h1>{% endblock %}
 
-<h1>Order</h1>
+{% block body %}
 
 <h2>Order</h2>
 {% include "::flash.html.twig" %}
