--- a/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Shop ({{ location.locationName }})</h1>{% endblock %}
 
-<h1>Shop ({{ location.locationName }})</h1>
+{% block body %}
 
 <p class="box"><a href="{{ path('shop_checkout') }}" class="btn-info"><span>View cart</span></a></p>
 
