--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>User</h1>{% endblock %}
+
 {% block body %}
-<h1>User</h1>
 
 {% render 'ClubUserBundle:Filter:getFilterForm' %}
 
