--- a/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>User</h1>{% endblock %}
+
 {% block body %}
-<h1>User</h1>
 
 <form method="post" action="{{ path('admin_user_create') }}">
 {% include "ClubUserBundle:AdminUser:form.html.twig" with {'form': form} %}
