--- a/src/Club/UserBundle/Resources/views/AdminUser/phone.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/phone.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>{{ profile.name }}</h1>{% endblock %}
+
 {% block body %}
-<h1>{{ profile.name }}</h1>
 
 <form method="post" action="{{ path('admin_user_phone', {'id': profile.id}) }}">
 {% include "ClubUserBundle:AdminUser:form.html.twig" with {'form': form} %}
