--- a/src/Club/UserBundle/Resources/views/AdminUser/subscription.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/subscription.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Subscriptions</h1>{% endblock %}
 
-<h1>Subscriptions</h1>
+{% block body %}
 
 {% include "ClubUserBundle:AdminUser:subscription_table.html.twig" with {'user': user} %}
 {% include "ClubUserBundle:AdminUser:ticket_coupon_table.html.twig" with {'user': user} %}
