--- a/src/Club/UserBundle/Resources/views/Ban/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Ban/index.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Ban</h1>{% endblock %}
+
 {% block body %}
-<h1>Ban</h1>
 
 {{ app.session.flash('notice') }}
 
