--- a/src/Club/UserBundle/Resources/views/Group/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/Group/edit.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Group</h1>{% endblock %}
+
 {% block body %}
-<h1>Group</h1>
 
 <form method="post" action="{{ path('admin_group_edit', {'id':group.id}) }}">
 {% include "ClubUserBundle:Group:form.html.twig" with {'form': form} %}
