--- a/src/Club/UserBundle/Resources/views/Group/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Group/index.html.twig
@@ -1,9 +1,10 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Group</h1>{% endblock %}
+
 {% block body %}
 
 {{ app.session.flash('notice') }}
-<h1>Group</h1>
 <p class="box"><a href="{{ path('admin_group_new') }}" class="btn-create"><span>Create group</span></a></p>
 
 {% include "::flash.html.twig" %}
