--- a/src/Club/UserBundle/Resources/views/Language/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Language/index.html.twig
@@ -1,8 +1,9 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Language</h1>{% endblock %}
+
 {% block body %}
 
-<h1>Language</h1>
 <p class="box"><a href="{{ path('admin_language_new') }}" class="btn-create"><span>Create language</span></a></p>
 
 {% include "::flash.html.twig" %}
