--- a/src/Club/UserBundle/Resources/views/Language/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/Language/new.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Language</h1>{% endblock %}
+
 {% block body %}
-<h1>Language</h1>
 
 <form method="post" action="{{ path('admin_language_new') }}">
 {% include "ClubUserBundle:Language:form.html.twig" with {'form': form} %}
