--- a/src/Club/UserBundle/Resources/views/Location/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/Location/edit.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Location</h1>{% endblock %}
+
 {% block body %}
-<h1>Location</h1>
 
 <form method="post" action="{{ path('admin_location_edit', {'id':location.id}) }}">
 {% include "ClubUserBundle:Location:form.html.twig" with {'form': form} %}
