--- a/src/Club/UserBundle/Resources/views/LocationConfig/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/LocationConfig/index.html.twig
@@ -1,8 +1,8 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
+{% block header %}<h1>Location</h1>{% endblock %}
 
-<h1>Location</h1>
+{% block body %}
 
 {% include "::flash.html.twig" %}
 
