--- a/src/Club/UserBundle/Resources/views/Role/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Role/index.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>Role</h1>{% endblock %}
+
 {% block body %}
-<h1>Role</h1>
 
 {% include "::flash.html.twig" %}
 
