--- a/src/Club/UserBundle/Resources/views/UserNote/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/UserNote/new.html.twig
@@ -1,7 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block header %}<h1>User Notes</h1>{% endblock %}
+
 {% block body %}
-<h1>Group</h1>
 
 <form method="post" action="{{ path('admin_user_note_new', {'id':user.id}) }}">
 {% include "ClubUserBundle:UserNote:form.html.twig" with {'form': form} %}
