Added flash globally.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -86,6 +86,7 @@
 
                         {% block header %}<h1>ClubMaster</h1>{% endblock %}
                         {% render "ClubLogBundle:Log:LogView" %}
+                        {% include '::flash.html.twig' %}
 
                         {% block body %}{% endblock %}
 
