--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -55,7 +55,7 @@
 
         <!-- Menu -->
         <div id="menu" class="box">
-          {% include "::top_menu.html.twig" %}
+          {% include "ClubLayoutBundle:Default:top_menu.html.twig" %}
         </div> <!-- /header -->
 
         <hr class="noscreen" />
@@ -74,7 +74,7 @@
                         </div> <!-- /padding -->
 
                         {% if is_granted('ROLE_ADMIN') %}
-                          {% include "::left_menu.html.twig" %}
+                          {% include "ClubLayoutBundle:Default:left_menu.html.twig" %}
                         {% endif %}
 
                 </div> <!-- /aside -->
@@ -86,7 +86,7 @@
 
                         {% block header %}<h1>ClubMaster</h1>{% endblock %}
                         {% render "ClubLogBundle:Log:LogView" %}
-                        {% include '::flash.html.twig' %}
+                        {% include 'ClubLayoutBundle:Default:flash.html.twig' %}
 
                         {% block body %}{% endblock %}
 
