--- a/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base.html.twig" %}
 
 {% block header %}<h1>Event</h1>{% endblock %}
 
