--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base.html.twig" %}
 
 {% block header %}<h1>Payment Method</h1>{% endblock %}
 
