--- a/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base.html.twig" %}
 
 {% block header %}<h1>Shop ({{ location.locationName }})</h1>{% endblock %}
 
