Moved all html to ClubLayoutBundle.

--- a/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
@@ -39,7 +39,7 @@
       <td>{{ attend.paid }}</td>
       <td>{{ attend.createdAt|date('Y-m-d H:i:s') }}</td>
       <td>
-        {% include "::delete_link.html.twig" with {'url':path('admin_event_attend_delete', {'id':attend.id})} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_event_attend_delete', {'id':attend.id})} %}
         <a href="{{ path('admin_event_attend_paid', {'id':attend.id}) }}">Paid</a>
         <a href="{{ path('admin_event_attend_unpaid', {'id':attend.id}) }}">Unpaid</a>
       </td>
