--- a/src/Club/UserBundle/Resources/views/User/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/form.html.twig
@@ -31,5 +31,5 @@
 
   {{ form_row(form._token) }}
 
-  {% include "::submit_button.html.twig" %}
+  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
 
