--- a/src/Club/EventBundle/Resources/views/AdminAttend/form.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/form.html.twig
@@ -1,3 +1,3 @@
   <p>{{ form_widget(form) }}</p>
-  {% include "::submit_button.html.twig" %}
+  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
 
