--- a/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
@@ -35,8 +35,8 @@
       <td>{{ category.id }}</td>
       <td>{{ category.categoryName }}</td>
       <td>
-        {% include "::edit_link.html.twig" with {'url':path('admin_shop_category_edit', { 'id':category.id })} %}
-        {% include "::delete_link.html.twig" with {'url':path('admin_shop_category_delete', { 'id':category.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_category_edit', { 'id':category.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_shop_category_delete', { 'id':category.id })} %}
       </td>
     </tr>
   {% else %}
