--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
@@ -35,8 +35,8 @@
       <td>{{ payment_method.id }}</td>
       <td>{{ payment_method.paymentMethodName }}</td>
       <td>
-        {% include "::edit_link.html.twig" with {'url':path('admin_shop_payment_method_edit', { 'id':payment_method.id })} %}
-        {% include "::delete_link.html.twig" with {'url':path('admin_shop_payment_method_delete', { 'id':payment_method.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_payment_method_edit', { 'id':payment_method.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_shop_payment_method_delete', { 'id':payment_method.id })} %}
       </td>
     </tr>
   {% else %}
