--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
@@ -37,8 +37,8 @@
       <td>{{ attr.attribute.attributeName }}</td>
       <td>{{ attr.value }}</td>
       <td>
-        {% include "::edit_link.html.twig" with {'url':path('admin_shop_product_attribute_edit', { 'id':attr.id })} %}
-        {% include "::delete_link.html.twig" with {'url':path('admin_shop_product_attribute_delete', { 'id':attr.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_product_attribute_edit', { 'id':attr.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_shop_product_attribute_delete', { 'id':attr.id })} %}
       </td>
     </tr>
   {% else %}
