--- a/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
@@ -37,8 +37,8 @@
       <td>{{ shipping.shippingName }}</td>
       <td>{{ shipping.price }}</td>
       <td>
-        {% include "::edit_link.html.twig" with {'url':path('admin_shop_shipping_edit', { 'id':shipping.id })} %}
-        {% include "::delete_link.html.twig" with {'url':path('admin_shop_shipping_delete', { 'id':shipping.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_shipping_edit', { 'id':shipping.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_shop_shipping_delete', { 'id':shipping.id })} %}
       </td>
     </tr>
   {% else %}
