--- a/src/Club/UserBundle/Resources/views/Currency/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Currency/index.html.twig
@@ -35,8 +35,8 @@
       <td>{{ currency.id }}</td>
       <td>{{ currency.currencyName }}</td>
       <td>
-        {% include "::edit_link.html.twig" with {'url':path('admin_currency_edit', { 'id':currency.id })} %}
-        {% include "::delete_link.html.twig" with {'url':path('admin_currency_delete', { 'id':currency.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_currency_edit', { 'id':currency.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_currency_delete', { 'id':currency.id })} %}
       </td>
     </tr>
   {% else %}
