--- a/src/Club/UserBundle/Resources/views/Location/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Location/index.html.twig
@@ -37,8 +37,8 @@
       <td>{{ location.location }}</td>
       <td>{{ location.locationName }}</td>
       <td>
-        {% include "::edit_link.html.twig" with {'url':path('admin_location_edit', { 'id':location.id })} %}
-        {% include "::delete_link.html.twig" with {'url':path('admin_location_delete', { 'id':location.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_location_edit', { 'id':location.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_location_delete', { 'id':location.id })} %}
         <a href="{{ path('admin_location_config', {'id':location.id}) }}">Config</a>
       </td>
     </tr>
