--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
@@ -6,11 +6,9 @@
 
 <p class="box"><a href="{{ path('admin_shop_product_attribute_new', {'id':product.id}) }}" class="btn-create"><span>Create attribute</span></a></p>
 
-<form method="post" action="{{ path('admin_shop_product_batch') }}">
 <table>
   <thead>
     <tr>
-      <th>[x]</th>
       <th>Id</th>
       <th>Attribute</th>
       <th>Value</th>
@@ -19,20 +17,12 @@
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="5" class="arrow-01">
-        <select name="" class="input-text">
-          <option value="">Delete selected</option>
-          <option value="">Remove selected</option>
-          <option value="">Rename selected</option>
-          <option value="">Copy selected</option>
-        </select>&nbsp;<input type="submit" value="OK" />
-      </td>
+      <td colspan="4">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for attr in product.productAttributes %}
     <tr>
-      <td><input type="checkbox" /></td>
       <td>{{ attr.id }}</td>
       <td>{{ attr.attribute.attributeName }}</td>
       <td>{{ attr.value }}</td>
@@ -43,10 +33,10 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">There are no product attributes for this product</td>
+    <td colspan="4">There are no product attributes for this product</td>
   </tr>
   {% endfor %}
   </tbody>
 </table>
-</form>
+
 {% endblock %}
