--- a/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
@@ -3,14 +3,11 @@
 {% block header %}<h1>Shipping</h1>{% endblock %}
 
 {% block body %}
-
 <p class="box"><a href="{{ path('admin_shop_shipping_new') }}" class="btn-create"><span>Create shipping</span></a></p>
 
-<form method="post" action="{{ path('admin_shop_shipping_batch') }}">
 <table>
   <thead>
     <tr>
-      <th>[x]</th>
       <th>Id</th>
       <th>Shipping</th>
       <th>Price</th>
@@ -19,20 +16,12 @@
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="5" class="arrow-01">
-        <select name="" class="input-text">
-          <option value="">Delete selected</option>
-          <option value="">Remove selected</option>
-          <option value="">Rename selected</option>
-          <option value="">Copy selected</option>
-        </select>&nbsp;<input type="submit" value="OK" />
-      </td>
+      <td colspan="4">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for shipping in shippings %}
     <tr>
-      <td><input type="checkbox" /></td>
       <td>{{ shipping.id }}</td>
       <td>{{ shipping.shippingName }}</td>
       <td>{{ shipping.price }}</td>
@@ -43,10 +32,9 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">There are no shippings at the time</td>
+    <td colspan="4">There are no shippings at the time</td>
   </tr>
   {% endfor %}
   </tbody>
 </table>
-</form>
 {% endblock %}
