--- a/src/Club/ShopBundle/Resources/views/AdminTransaction/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminTransaction/index.html.twig
@@ -3,41 +3,29 @@
 {% block header %}<h1>Transaction</h1>{% endblock %}
 
 {% block body %}
-
-<form method="post" action="">
 <table>
   <thead>
     <tr>
-      <th>[x]</th>
       <th>Id</th>
       <th>Transaction Code</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="3" class="arrow-01">
-        <select name="" class="input-text">
-          <option value="">Delete selected</option>
-          <option value="">Remove selected</option>
-          <option value="">Rename selected</option>
-          <option value="">Copy selected</option>
-        </select>&nbsp;<input type="submit" value="OK" />
-      </td>
+      <td colspan="2">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for transaction in transactions %}
     <tr>
-      <td><input type="checkbox" /></td>
       <td>{{ transaction.id }}</td>
       <td>{{ transaction.transactionCode }}</td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="4">There are no transactions at the time</td>
+    <td colspan="2">There are no transactions at the time</td>
   </tr>
   {% endfor %}
   </tbody>
 </table>
-</form>
 {% endblock %}
