--- a/src/Club/UserBundle/Resources/views/Ban/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Ban/index.html.twig
@@ -4,11 +4,9 @@
 
 {% block body %}
 
-<form method="post" action="">
 <table>
   <thead>
     <tr>
-      <th>[x]</th>
       <th>Type</th>
       <th>Value</th>
       <th>Expires At</th>
@@ -17,18 +15,12 @@
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="7" class="arrow-01">
-        <select name="" class="input-text">
-          <option value="">Expire selected</option>
-          <option value="">Extend selected</option>
-        </select>&nbsp;<input type="submit" value="OK" />
-      </td>
+      <td colspan="4">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for ban in bans %}
     <tr>
-      <td><input type="checkbox" /></td>
       <td>{{ ban.type }}</td>
       <td>{{ ban.value }}</td>
       <td>{{ ban.expireDate|date("Y-m-d") }}</td>
@@ -39,11 +31,10 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">There are no bans at the time</td>
+    <td colspan="4">There are no bans at the time</td>
   </tr>
   {% endfor %}
   </tbody>
 </table>
-</form>
 
 {% endblock %}
