--- a/src/Club/UserBundle/Resources/views/Currency/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Currency/index.html.twig
@@ -3,14 +3,11 @@
 {% block header %}<h1>Currency</h1>{% endblock %}
 
 {% block body %}
-
 <p class="box"><a href="{{ path('admin_currency_new') }}" class="btn-create"><span>Create currency</span></a></p>
 
-<form method="post" action="{{ path('admin_currency_batch') }}">
 <table>
   <thead>
     <tr>
-      <th>[x]</th>
       <th>Id</th>
       <th>Currency</th>
       <th>Actions</th>
@@ -18,20 +15,12 @@
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="4" class="arrow-01">
-        <select name="" class="input-text">
-          <option value="">Delete selected</option>
-          <option value="">Remove selected</option>
-          <option value="">Rename selected</option>
-          <option value="">Copy selected</option>
-        </select>&nbsp;<input type="submit" value="OK" />
-      </td>
+      <td colspan="3">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for currency in currencies %}
     <tr>
-      <td><input type="checkbox" /></td>
       <td>{{ currency.id }}</td>
       <td>{{ currency.currencyName }}</td>
       <td>
@@ -41,10 +30,9 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="4">There are no currencies at the time</td>
+    <td colspan="3">There are no currencies at the time</td>
   </tr>
   {% endfor %}
   </tbody>
 </table>
-</form>
 {% endblock %}
