--- a/src/Club/UserBundle/Resources/views/Location/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Location/index.html.twig
@@ -3,14 +3,11 @@
 {% block header %}<h1>Location</h1>{% endblock %}
 
 {% block body %}
-
 <p class="box"><a href="{{ path('admin_location_new') }}" class="btn-create"><span>Create location</span></a></p>
 
-<form method="post" action="{{ path('admin_location_batch') }}">
 <table>
   <thead>
     <tr>
-      <th>[x]</th>
       <th>Id</th>
       <th>Parent</th>
       <th>Location</th>
@@ -19,20 +16,12 @@
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="5" class="arrow-01">
-        <select name="" class="input-text">
-          <option value="">Delete selected</option>
-          <option value="">Remove selected</option>
-          <option value="">Rename selected</option>
-          <option value="">Copy selected</option>
-        </select>&nbsp;<input type="submit" value="OK" />
-      </td>
+      <td colspan="4">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for location in locations %}
     <tr>
-      <td><input type="checkbox" /></td>
       <td>{{ location.id }}</td>
       <td>{{ location.location }}</td>
       <td>{{ location.locationName }}</td>
@@ -44,10 +33,9 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">There are no locations at the time</td>
+    <td colspan="4">There are no locations at the time</td>
   </tr>
   {% endfor %}
   </tbody>
 </table>
-</form>
 {% endblock %}
