--- a/src/Club/UserBundle/Resources/views/LocationConfig/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/LocationConfig/index.html.twig
@@ -3,12 +3,9 @@
 {% block header %}<h1>Location</h1>{% endblock %}
 
 {% block body %}
-
-<form method="post" action="{{ path('admin_location_config_batch') }}">
 <table>
   <thead>
     <tr>
-      <th>[x]</th>
       <th>Key</th>
       <th>Value</th>
       <th>Actions</th>
@@ -16,20 +13,12 @@
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="4" class="arrow-01">
-        <select name="" class="input-text">
-          <option value="">Delete selected</option>
-          <option value="">Remove selected</option>
-          <option value="">Rename selected</option>
-          <option value="">Copy selected</option>
-        </select>&nbsp;<input type="submit" value="OK" />
-      </td>
+      <td colspan="3">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for config in configs %}
     <tr>
-      <td><input type="checkbox" /></td>
       <td>{{ config.config.configKey }}</td>
       <td>{{ config.value }}</td>
       <td>
@@ -38,10 +27,9 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="4">There are no configs for this location./td>
+    <td colspan="3">There are no configs for this location./td>
   </tr>
   {% endfor %}
   </tbody>
 </table>
-</form>
 {% endblock %}
