--- a/src/Club/UserBundle/Resources/views/Role/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Role/index.html.twig
@@ -3,38 +3,27 @@
 {% block header %}<h1>Role</h1>{% endblock %}
 
 {% block body %}
-
-<form method="post" action="{{ path('admin_role_batch') }}">
 <table>
   <thead>
     <tr>
-      <th>[x]</th>
       <th>Id</th>
       <th>Role</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="3" class="arrow-01">
-        <select name="" class="input-text">
-          <option value="">Delete selected</option>
-          <option value="">Remove selected</option>
-          <option value="">Rename selected</option>
-          <option value="">Copy selected</option>
-        </select>&nbsp;<input type="submit" value="OK" />
-      </td>
+      <td colspan="2">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for role in roles %}
     <tr>
-      <td><input type="checkbox" /></td>
       <td>{{ role.id }}</td>
       <td>{{ role.roleName }}</td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">There are no roles at the time.</td>
+    <td colspan="2">There are no roles at the time.</td>
   </tr>
   {% endfor %}
   </tbody>
