Added translation support .

--- a/src/Club/LayoutBundle/Resources/views/Default/left_menu.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/left_menu.html.twig
@@ -1,29 +1,27 @@
 <ul class="box">
-  <li><a href="{{ path('admin_user') }}">User</a>
+  <li><a href="{{ path('admin_user') }}">{% trans %}User{% endtrans %}</a>
     <ul>
-      <li><a href="{{ path('admin_location') }}">Location</a></li>
-      <li><a href="{{ path('admin_group') }}">Group</a></li>
-      <li><a href="{{ path('admin_role') }}">Role</a></li>
-      <li><a href="{{ path('admin_currency') }}">Currency</a></li>
-      <li><a href="{{ path('admin_language') }}">Language</a></li>
-      <li><a href="{{ path('ban') }}">Ban</a></li>
-      <li><a href="{{ path('admin_task') }}">Task</a></li>
-      <li><a href="{{ path('admin_log') }}">Log</a></li>
+      <li><a href="{{ path('admin_location') }}">{% trans %}Location{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_group') }}">{% trans %}Group{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_role') }}">{% trans %}Role{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_currency') }}">{% trans %}Currency{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_language') }}">{% trans %}Language{% endtrans %}</a></li>
+      <li><a href="{{ path('ban') }}">{% trans %}Ban{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_task') }}">{% trans %}Task{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_log') }}">{% trans %}Log{% endtrans %}</a></li>
     </ul>
   </li>
-  <li><a href="{{ path('shop') }}">Shop</a>
+  <li><a href="{{ path('shop') }}">{% trans %}Shop{% endtrans %}</a>
     <ul>
-      <li><a href="{{ path('admin_shop_product') }}">Product</a></li>
-      <li><a href="{{ path('admin_shop_category') }}">Category</a></li>
-      <li><a href="{{ path('admin_shop_order') }}">Order</a></li>
-      <li><a href="{{ path('admin_shop_payment_method') }}">Payment Method</a></li>
-      <li><a href="{{ path('admin_shop_shipping') }}">Shipping</a></li>
-      <li><a href="{{ path('admin_shop_special') }}">Special</a></li>
-      <li><a href="{{ path('admin_shop_transaction') }}">Transaction</a></li>
+      <li><a href="{{ path('admin_shop_product') }}">{% trans %}Product{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_shop_category') }}">{% trans %}Category{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_shop_order') }}">{% trans %}Order{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_shop_payment_method') }}">{% trans %}Payment Method{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_shop_shipping') }}">{% trans %}Shipping{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_shop_special') }}">{% trans %}Special{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_shop_transaction') }}">{% trans %}Transaction{% endtrans %}</a></li>
     </ul>
   </li>
-  <li><a href="{{ path('admin_event_event') }}">Event</a></li>
-  <li><a href="{{ path('club_account_adminaccount_index') }}">Account</a></li>
-
+  <li><a href="{{ path('admin_event_event') }}">{% trans %}Event{% endtrans %}</a></li>
+  <li><a href="{{ path('club_account_adminaccount_index') }}">{% trans %}Account{% endtrans %}</a></li>
 </ul>
-
