Updated a few headers.

--- a/src/Club/EventBundle/Resources/views/Event/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<p><a href="{{ path('club_event_event_ical') }}">Ical format</a></p>
+<p class="box"><a href="{{ path('club_event_event_ical') }}" class="btn-info"><span>iCal format</span></a></p>
 <h2>Event</h2>
 
 <table>
