--- a/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
@@ -1,6 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
-
-{% block header %}<h1>{{ user.profile.name }}</h1>{% endblock %}
+{% extends "ClubUserBundle::base.html.twig" %}
 
 {% block body %}
 
