--- a/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
@@ -1,6 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
-
-{% block header %}<h1>User</h1>{% endblock %}
+{% extends "ClubUserBundle::base.html.twig" %}
 
 {% block body %}
 
