Using UserBundle base template.

--- a/src/Club/UserBundle/Resources/views/Auth/register.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/register.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubUserBundle::base.html.twig" %}
 
 {% block body %}
 im logging in :p
