--- a/src/Club/UserBundle/Resources/views/User/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/form.html.twig
@@ -32,5 +32,5 @@
 
   {{ form_row(form._token) }}
 
-  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+  {% include "ClubUserBundle::submit_button.html.twig" %}
 
