--- a/src/Club/UserBundle/Resources/views/UserNote/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/UserNote/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubUserBundle::base.html.twig" %}
 
 {% block header %}<h1>User Notes</h1>{% endblock %}
 
