--- a/src/Club/UserBundle/Resources/views/AdminUser/phone.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/phone.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubUserBundle::base.html.twig" %}
 
 {% block header %}<h1>{{ profile.name }}</h1>{% endblock %}
 
