--- a/src/Club/UserBundle/Resources/views/Currency/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Currency/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubUserBundle::base.html.twig" %}
 
 {% block header %}<h1>Currency</h1>{% endblock %}
 
@@ -24,8 +24,8 @@
       <td>{{ currency.id }}</td>
       <td>{{ currency.currencyName }}</td>
       <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_currency_edit', { 'id':currency.id })} %}
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_currency_delete', { 'id':currency.id })} %}
+        {% include "ClubUserBundle::edit_link.html.twig" with {'url':path('admin_currency_edit', { 'id':currency.id })} %}
+        {% include "ClubUserBundle::delete_link.html.twig" with {'url':path('admin_currency_delete', { 'id':currency.id })} %}
       </td>
     </tr>
   {% else %}
