--- a/src/Club/UserBundle/Resources/views/Group/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Group/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubUserBundle::base.html.twig" %}
 
 {% block header %}<h1>Group</h1>{% endblock %}
 
@@ -27,8 +27,8 @@
       <td>{{ group.id }}</td>
       <td>{{ group.groupName }} ( {{ group.users|length }} )</td>
       <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_group_edit', { 'id':group.id })} %}
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_group_delete', { 'id':group.id })} %}
+        {% include "ClubUserBundle::edit_link.html.twig" with {'url':path('admin_group_edit', { 'id':group.id })} %}
+        {% include "ClubUserBundle::delete_link.html.twig" with {'url':path('admin_group_delete', { 'id':group.id })} %}
       </td>
     </tr>
   {% else %}
