--- a/src/Club/UserBundle/Resources/views/LocationConfig/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/LocationConfig/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubUserBundle::base.html.twig" %}
 
 {% block header %}<h1>Location</h1>{% endblock %}
 
@@ -22,7 +22,7 @@
       <td>{{ config.config.configKey }}</td>
       <td>{{ config.value }}</td>
       <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_location_config_edit', { 'id':config.id })} %}
+        {% include "ClubUserBundle::edit_link.html.twig" with {'url':path('admin_location_config_edit', { 'id':config.id })} %}
       </td>
     </tr>
   {% else %}
